correct spacing

--- a/css/blog-dto-btn.css
+++ b/css/blog-dto-btn.css
@@ -8,12 +8,12 @@ body {
 
 .blog-list {
 
-  margin-top: 2em !important;
+  margin-top: 1.8em !important;
 }
 
 .blog-photo {
 
-  margin-top: 2.5em !important;
+  margin-top: 2.2em !important;
 }
 
 
